[Liang & Piao] remove name from ParkingLot and remove message from FullParkingLotException and InvalidTicketException